added default style for disabled input-fields

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -460,6 +460,10 @@ input.aligned-inputs {
   width: 100%;
 }
 
+input[disabled] {
+  background-color: #eee;
+}
+
 td.icon,
 td.checkbox,
 th.checkbox {
