--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -5,13 +5,16 @@
 
 <% form_tag '/language/update' do -%>
   <fieldset id="" class="">
-    <p><%=_("First language")%>
+    <p>
+<label><%=_("First language")%></label>
     	<%= select_tag :first_language, options_for_select(@valid||[], @current||""),
             :disabled=>!@permissions[:write] %>
-    <p> <%=_("Use UTF8 encoding")%>
+    <p> 
+<label><%=_("Use UTF8 encoding")%></label>
     	<%= check_box_tag :utf8, "true", @utf8=="true",
         :disabled=>!@permissions[:write] %></p>
-    <p><%=_("Set root locale")%>
+    <p>
+<label><%=_("Set root locale")%></label>
     <%= select_tag :rootlocale, options_for_select(["true","false","ctype"],
         @rootlocale), :disabled=>!@permissions[:write] %>
     </p>
