--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -34,33 +34,28 @@
 
 <% disabled = ! @permissions[:write] %>
 
-<div class="table">
+<fieldset id="" class="">
+
   <% form_for(:mail_settings, @mail_settings, :url => { :action => "update" }, :html => { :method => :put, :id => "mailForm" } ) do |f| %>
-  <table class="list">
   <%= f.error_messages %>
-    <tr class="bg">
-	<td class="first"><%=_("Outgoing mail server (SMTP)")%></strong></td>
-	<td class="last"><%= f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><%=_("Transport Layer Security (TLS)")%></td>
-	<td class="last"><%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><%=_("User name")%></td>
-	<td class="last"><%= f.text_field :user, :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><%=_("Password")%></td>
-	<td class="last"><%= f.password_field :password, :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><%=_("Confirm Password")%></td>
-        <td class="last"><%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %></td>
-    </tr>
-    <tr>
-    <td><%= form_send_buttons :onclick=>"Element.show('progress')" %></td>
-    </tr>
-  </table>
+	<p>
+	<label for="<%= :smtp_server %>"><%=_("Outgoing mail server (SMTP)")%></label>
+	<%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
+	<p>
+	<label><%=_("Transport Layer Security (TLS)")%></label>
+	<%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></p>
+	<p>
+	<label><%=_("User name")%></label>
+	<%= f.text_field :user, :disabled => disabled %></p>
+	<p>
+	<label><%=_("Password")%></label>
+	<%= f.password_field :password, :disabled => disabled %></p>
+	<p>
+	<label><%=_("Confirm Password")%></label>
+        <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %></p>
+    </fieldset>
+    <p>
+    <%= form_send_buttons :onclick=>"Element.show('progress')" %>
+    </p>
   <% end %>
 </div>
