making error handling consistent

--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -1,4 +1,4 @@
-<%= report_error(error, _("An error occured when loading status information.")) if error %>
+<%= report_error(error, _("An problem occured when loading status information.")) if error %>
 
 <div class="status_status">
   <% unless status %>
