--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -51,7 +51,7 @@
 
   <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put, :id => "adminForm" } ) do |f| %>
   <%= f.error_messages %>
-    <fieldset>
+    <fieldset id="password">
 	<p><label><%=_("Password")%></label>
 	<%= f.password_field :password, :disabled => disabled %>
 	</p>
