--- a/plugins/systemtime/app/views/systemtime/_timezones.rhtml
+++ b/plugins/systemtime/app/views/systemtime/_timezones.rhtml
@@ -9,4 +9,4 @@ end
 list.sort!
 %>
 <%= select_tag "timezone",
-  options_for_select(list, central), :disabled=> disabled, :class=>'aligned-inputs' %>
+  options_for_select(list, central), :disabled=> disabled %>
