--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -52,26 +52,21 @@
     <% form_tag '/systemtime/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
       <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
       %>
-      <div>
-        <label for="region">
-          <%=_("Region:")%>
-        </label>
-        <%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled,
-          :class=>'aligned-inputs' %>
-      </div>
-      <div>
-        <label for="timezone">
-          <%=_("Timezone:")%>
-        </label>
+		<fieldset id="" class="">
+		<p>
+   			<label for="region"><%=_("Region:")%></label>
+        	<%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled %>
+		</p>
+  		<p>
+        <label for="timezone"><%=_("Timezone:")%></label>
         <span id="timezones">
           <%= render(:partial => 'timezones',
             :locals => {:region => @region, :default => @timezone,
               :disabled => disabled})  %>
         </span>
-      </div>
+</p>    
+<p>
       <% if @utcstatus != "UTConly" %>
-
-        <div>
           <label for="utc">
             <%=_("Hardware clock is set to UTC")%>
           </label>
@@ -80,35 +75,34 @@
           <input type="checkbox" name="utc" id="utc" value="true"
           <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
                  <%=  "disabled=\"disabled\"" if disabled %> />
-        </div>
+</p>  
+      </fieldset>
       <% end %>
 
       <div>
-        <input type="radio" name="timeconfig" value="none" checked="true" onclick="disable();"/>
-        <%=_("Don't set time")%>
         <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"/>
         <%=_("Manually configure time")%>
-        <input type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"/>
-        <%=_("Synchronize via Network Time Protocol (NTP)")%>
       </div>
       <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
       %>
-      <div>
-        <label for="date_date">
-          <%= _("Date:") %>
-        </label>
-
-        <%= text_field "date","date", :class => 'datepicker aligned-inputs',
+      <fieldset>
+		<p>
+        <label for="date_date"><%= _("Date:") %></label>
+        <%= text_field "date","date",
           :disabled=> "true", :value => @date
       %>
-      </div>
-      <div>
+      </p>
+      <p>
         <label for="currenttime">
           <%= _("Time:") %>
         </label>
-
-        <span><%= text_field_tag "currenttime", @time, :disabled=> "true", :class=>'aligned-inputs' %></span>
-      </div>
+		<%= text_field_tag "currenttime", @time, :disabled=> "true"%>
+      </p>
+	</fieldset>
+	<div>
+	<input type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"/>
+  <%=_("Synchronize via Network Time Protocol (NTP)")%>
+	</div>
       <div>
       <p>
         <%= form_send_buttons :disabled => disabled, :class => "button" %>
