prepare registration to basesystem

--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -48,8 +48,7 @@
     <% end %>
   </table>
   <br/>
-  <%= submit_tag _("Register"), :onclick=>"Element.show('progress')", :class => 'button' -%>
-  <a href="/" class="button"><%=_("Cancel")%></a>
+  <%= form_send_buttons %>
 <% end -%>
 </div>
 
