close <input ... > properly

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -90,7 +90,7 @@
     
   </ul>
   
-  <input type="hidden" id="interface" name="interface" value="<%= @iface %>">
+  <input type="hidden" id="interface" name="interface" value="<%= @iface %>"/>
 
   <fieldset id="ipadress" class="">
     <legend><%=_("IP address")%></legend>
