chanded link colour globally and for links in forms

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -46,7 +46,7 @@ h5 {
 }
 
 a {
-  color: #06c;
+  color: #333;
   text-decoration: none;
 }
 a:hover {
@@ -369,6 +369,10 @@ label {
   margin: 0;
   padding-top: 15px;
   text-align: center;
+}
+
+form a {
+  color: #06c;
 }
 
 /* == Helper Styles ======================================================= */
