--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -422,6 +422,14 @@ input.button {
   float: left;
 }
 
+.bug-icon {
+  display: block;
+  width: 23px;
+  height: 23px;
+  background: transparent url(images/bug.png) no-repeat scroll 0 0;
+  float: left;
+}
+
 .status-icon + span {
   margin-left: 1em;
   line-height: 2em;
