Spelling fix in html id.

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -92,7 +92,7 @@
   
   <input type="hidden" id="interface" name="interface" value="<%= @iface %>"/>
 
-  <fieldset id="ipadress" class="">
+  <fieldset id="ip-address" class="">
     <legend><%=_("IP address")%></legend>
     <p>
       <label for="<%= :conf_mode %>"><%=_("Configuration mode")%></label>
