Documented form_send_buttons, used it in Network.

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -135,7 +135,7 @@
     </p>
   </fieldset>
   <p>
-    <%= n.submit _("Save"), :disabled => write_disabled, :class => "button" %> or <a href="/"><%=_("Cancel")%></a>
+    <%= form_send_buttons :disabled => write_disabled %>
   </p>
 <% end %>
 </div>
