fixed "Trailing comma not supported by MSIE" warnings

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -98,7 +98,7 @@ function plotPieGraph (graph_id, graph_title, graph_data ) {
 
       cursor: {
         show: false
-      },
+      }
     });
 }
 
@@ -121,7 +121,7 @@ function plotPieGraphError (graph_id, graph_title, graph_data ) {
 
       cursor: {
         show: false
-      },
+      }
     });
 }
 
@@ -132,7 +132,7 @@ function plotLineGraph(graph_id, graph_title, graph_data ) {
       title: graph_title,
       axes: {
         xaxis: {
-         showTicks: false,
+         showTicks: false
         },
         yaxis: {
           showTicks: true,
