added missing script type

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -4,7 +4,7 @@
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.checktree.js"></script>
 
-  <script>
+  <script type="text/javascript">
   $(document).ready(function(){
 	$("ul.tree").checkTree({
 		/*
