use text names for languages instead of flags (bnc#541528)
the strings have been read from language_<xy>_<YZ>.ycp
file, the remaning left from http://en.wikipedia.org/wiki/List_of_ISO_639-1_codes

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -47,8 +47,8 @@
         if host.blank? || user.blank? -%>
       <% else -%>
         <ul>
-          <li><%= link_to_remote( image_tag(current_locale_image, :size => "16x11", :alt => "#{current_locale}"), 
-              :update =>"language_selection", :url => { :controller => :controlpanel, :action => :select_language} ) %></li>
+          <li><%=_("Langugage:")%> <strong><%= link_to_remote(current_locale_name,
+              :update =>"language_selection", :url => { :controller => :controlpanel, :action => :select_language} ) %></strong></li>
           <li><strong><%=_("Connected Host")%></strong></li>
           <li><%=_("Name:")%> <strong><%= host.name -%></strong></li>
           <li><%=_("User:")%> <strong><%= user -%></strong></li>
