added global styling for input[type="submit"]

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -385,7 +385,8 @@ form a {
 }
 
 a.button,
-input.button {
+input.button,
+input[type="submit"] {
   background: #eee url(images/bg-dark-gradient.png) repeat-x scroll left top;
   color: #fff !important;
   font-size: 12px;
