--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -325,6 +325,37 @@ ul.list-2level-inline {
       min-width: 250px;
     }
 
+/* Tabed Contend */
+.tab-form {
+  
+}
+.tab-form fieldset{
+  clear: left;
+}
+ul.tab-nav {
+  list-style: none inside;
+  padding: 0;
+}
+
+.tab-nav li {
+  float: left;
+  min-width: 7em;
+  text-align: center;
+  padding: 0;
+  margin-right: 1px;
+}
+  .tab-nav li a {
+    display: block;
+    width: 100%;
+    background-color: #eee;
+    padding: 0.5em 0;
+    
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    
+  }
 /* == Text Styles ======================================================= */
 
 .notifications {
