--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -60,15 +60,14 @@
       <% end -%>
       </div>
     </div>
-
+    
     <div id="content" class="content">
-
-
+      
       <!-- here both flash and dynamic notifications should be added -->
       <div id="flash-messages">
-      <div id="language_selection"/>
+      <div id="language_selection"></div>
       <!-- show the flash messages -->
-
+      
       <% flash.each do |flash_type, message| %>
         <%
           flash_icon = case flash_type
@@ -80,14 +79,13 @@
             else "ui-state-highlight"
           end
         %>
-
+        
         <div class="flash-message <%= flash_style %> ui-corner-all" style="margin-top: 20px; padding: .7em;">
           <p><span class="ui-icon <%= flash_icon %>" style="float: left; margin-right: .3em;"></span><strong><%= message %></strong></p>
         </div>
         <% flash.delete flash_type -%>
       <% end %>
       </div> <!-- flash messages -->
-<br/>
       <div id="progress" style="display:none;">
         <%= image_tag("/images/working.gif") %><%=_("...Wait...")%>
       </div>
@@ -97,7 +95,7 @@
 
     <div id="footer" class="">
       <div class="copy">&copy; 2009 Novell, Inc.</div>
-
     </div>
+
   </body>
 </html>
