--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -127,8 +127,8 @@ ul li {
     margin-bottom: 1.5em;
   }
 #footer {
-  padding: 1em 0 100px;
-  border-top: 1px dotted #ccc;
+  padding: 1em 0;
+/*  border-top: 1px dotted #ccc;*/
 }
 
 /* == Basic Styles ======================================================== */
