added highlighting for current tab

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -362,6 +362,12 @@ ul.tab-nav {
   .tab-nav li a:hover {
     text-decoration: none;
   }
+  
+  
+    .tab-nav li a.selected {
+      background-color: #06c;
+      color: #fff;
+    }
 /* == Text Styles ======================================================= */
 
 .notifications {
