--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -515,8 +515,12 @@ input[type="submit"] {
 .plugin-content {
   float: left;
   width: 90%;
-  padding-bottom:5em;
-}
+  padding-bottom: 5em;
+  
+/*  border-color: #FF0000 #00FF00 #0000FF;
+  border-style: solid;
+  border-width: 1px;
+*/}
 
 select.aligned-inputs,
 input.aligned-inputs {
@@ -560,4 +564,13 @@ th.checkbox {
 
 #flash-messages {
   margin-bottom: 1em;
+}
+.flash-message {
+  margin-top: 20px;
+  padding: 0.7em;
+}
+
+.flash-message span {
+  float: left;
+  margin-right: 0.3em;
 }
