--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -31,29 +31,29 @@
 <div class='plugin-icon'><img src='/icons/yast-mail-server.png'/></div>
 <h2><%=_("Mail Settings")%></h2>
 
-<div class='plugin-content'>
+<div class='plugin-content grid_12'>
 
 <% disabled = ! @permissions[:write] %>
 
-<fieldset id="" class="">
-
   <% form_for(:mail_settings, @mail_settings, :url => { :action => "update" }, :html => { :method => :put, :id => "mailForm" } ) do |f| %>
   <%= f.error_messages %>
-	<p>
-	<label for="<%= :smtp_server %>"><%=_("Outgoing mail server (SMTP)")%></label>
-	<%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
-	<p>
-	<label><%=_("Transport Layer Security (TLS)")%></label>
-	<%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></p>
-	<p>
-	<label><%=_("User name")%></label>
-	<%= f.text_field :user, :disabled => disabled %></p>
-	<p>
-	<label><%=_("Password")%></label>
-	<%= f.password_field :password, :disabled => disabled %></p>
-	<p>
-	<label><%=_("Confirm Password")%></label>
-        <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %></p>
+    <fieldset class="grid_12">
+      <p>
+        <label for="<%= :smtp_server %>"><%=_("Outgoing mail server (SMTP)")%></label>
+        <%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
+      <p>
+        <label><%=_("Transport Layer Security (TLS)")%></label>
+        <%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></p>
+      <p>
+        <label><%=_("User name")%></label>
+        <%= f.text_field :user, :disabled => disabled %></p>
+      <p>
+        <label><%=_("Password")%></label>
+        <%= f.password_field :password, :disabled => disabled %></p>
+      <p>
+        <label><%=_("Confirm Password")%></label>
+        <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %>
+      </p>
     </fieldset>
     <p>
     <%= form_send_buttons :onclick=>"Element.show('progress')" %>
