--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -65,7 +65,7 @@
     <div id="content" class="container_12">
       
       <!-- here both flash and dynamic notifications should be added -->
-      <div id="flash-messages" class="grid_12">
+      <div id="flash-messages" class="grid_12 alpha">
       <div id="language_selection"></div>
       <!-- show the flash messages -->
       
