--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -58,10 +58,9 @@
       };
    <% end %>
 <% end %>
-
-<div class='plugin-content'>
 <div class='plugin-icon'><img src='/icons/yast-network.png' alt=''/></div>
 <h2><%=_("Network")%></h2>
+<div class='plugin-content'>
 
 <% form_tag("/network", :method => "get") do %>
   <!-- (collection, value, text, selected) -->
@@ -87,7 +86,7 @@
 <!-- ~/svn/web-client/plugins/systemtime/app/views/systemtime/index.rhtml -->
   
   <ul class="tab-nav">
-    
+    <!-- javascript adds tabs here -->
   </ul>
   
   <input type="hidden" id="interface" name="interface" value="<%= @iface %>"/>
