--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -528,10 +528,11 @@ input[type="submit"] {
 .plugin-content {
   float: left;
   width: 90%;
-/*  padding-bottom: 5em;*/
   border-color: #ddd #ccc #bbb;
   border-style: solid;
   border-width: 1px;
+  
+  clear: left;
   
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
