--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -534,6 +534,8 @@ input[type="submit"] {
   
   clear: left;
   
+  min-height: 5em;
+  
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
@@ -596,7 +598,6 @@ th.checkbox {
 }
 .flash-message {
   margin-top: 20px;
-  padding: 0.7em;
 }
 
 .flash-message span {
