--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -1,6 +1,6 @@
 <div class='plugin-icon'><img src='/icons/yast-language.png' alt="<%= _("language plugin") %>"/></div>
-<div class='plugin-content'>
 <h2><%=_("Language")%></h2>
+<div class='plugin-content grid_12'>
 <br/>
 
 <% form_tag '/language/update' do -%>
