--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -60,7 +60,7 @@
 <% end %>
 <div class='plugin-icon'><img src='/icons/yast-network.png' alt=''/></div>
 <h2><%=_("Network")%></h2>
-<div class='plugin-content'>
+<div class='plugin-content grid_12'>
 
 <% form_tag("/network", :method => "get") do %>
   <!-- (collection, value, text, selected) -->
