--- a/plugins/patch_updates/app/views/patch_updates/index.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/index.html.erb
@@ -9,8 +9,8 @@
 
   </style>
   <div class='plugin-icon'><img src='/icons/yast-online_update.png'/></div>
-  <div class='plugin-content'>
   <h2><%=_("Updates") %></h2>
+  <div class='plugin-content grid_12'>
   <div class="loading"></div>
   <% if @patch_updates.empty? %>
     <h3><%=_("Your system is up to date.") %></h3>
