--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -1,7 +1,7 @@
 <div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="<%= _("register plugin") %>"/></div>
-<div class='plugin-content'>
 <h2><%=_("Registration")%></h2>
-<br/>
+
+<div class='plugin-content grid_12'>
 
 <% form_tag '/registration/update' do -%>
   <table summary="<%= _("This table gives registration settings.") %>">
