--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -21,8 +21,8 @@ $(document).ready(function() {
 <% end %>
 
 <div class='plugin-icon'><img src='/images/monitoring.png'/></div>
-<div class='plugin-content'>
 <h2><%=_("Status")%></h2>
+<div class="plugin-content grid_12">
 
 <h3><%= _("Events") %></h3>
 
