--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <div class='plugin-icon'><img src='/icons/yast-users.png'/></div>
-<div class='plugin-content'>
-
 <h2><%=_("Local User")%></h2>
+<div class="plugin-content grid_12">
 
 <table class="list">
   <tr>
