wrapped controle center favorits

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -58,8 +58,8 @@
 </div>
 
 
-<div id="favorites">
   <h3><%= image_tag("/images/yast-config.png", :height=>"23", :width=>"23", :border=>"0") %> <%= _("Configuration") %></h3>
+<div id="favorites" class="wrapper grid_12">
 
   <% line_counter = 0 %>
   <% shortcuts_counter = 0 %>
