changed style for System Actions on Home

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -226,8 +226,9 @@ ul li {
       min-height: 110px;
       height: 100%;
       overflow: hidden;
-      border-left: 1px solid #999;
+      border-left: 1px solid #ccc;
       background-color: #eee;
+      background: #fcfcfc url(/stylesheets/images/gradient-light-short.png) repeat-x scroll left bottom;
       
       float: right;
     }
@@ -534,7 +535,8 @@ input[type="submit"] {
 }
 
 .wrapper,
-.plugin-content {
+.plugin-content,
+#status-wrapper {
   background-color: #fff;
   min-height: 5em;
 }
